test/domains/userAPI/orderIndex-empty.good
orderIndex-empty.chpl:3: error: halt reached - orderToIndex() is invoked on an empty domain
